# rustrex

./: .gdbinit  .gitignore  Cargo.toml  README.md  notes.md  rr  tt  wt.bat
asm/: all.s  equates.inc  equates.s  makefile  tasker.s  test.asm  test.s
cpp/: .clang-format  .gitignore  .ycm_extra_conf.py  README.md  WORKSPACE  adler.json  bb  gtags  instest.json  macbaz.rc  project.vim  rr  tt
cpp/larry/: 6502.C  6809.C  EMU.H  PUBLIC.C  README.TXT
cpp/src/: BUILD
cpp/src/core/: c6809Larry.cpp  c6809Larry.h  c6809base.h  files.cpp  files.h  json.cpp  json.h  main.cpp  main.h  mem.cpp  mem.h  (+4 more)
resources/: syms.yaml
src/: addr.rs  breakpoints.rs  clock.rs  cpu.rs  disassembler.rs  diss.rs  filewatcher.rs  isa.rs  json.rs  machine.rs  main.rs  mem.rs  memblock.rs  memmap.rs  proclog.rs  registers.rs  state.rs  symtab.rs  timer.rs  utils.rs  vectrex.rs  via.rs
src/cpu/: addr.rs  addrmodes.rs  alu.rs  clock.rs  cpu.rs  cpucore.rs  cpucore2.rs  decoder.rs  diss.rs  flags.rs  formatters.rs  indexed.rs  isa.rs  mod.rs  registers.rs
src/cpu2/: cpu.rs  diss.rs  isa.rs  mod.rs
src/gdbstub/: gdbcore.rs  mod.rs  proxy.rs  reply.rs  sigs.rs
src/m6522/: mod.rs
src/mem/: lmemmap.rs  mem.rs  memblock.rs  memcore.rs  memmap.rs  mod.rs
src/simple/: io.rs  mod.rs  simplecore.rs  simplegdb.rs
src/tests/: gregtest.rs  jsontest.rs  mod.rs  tester.rs
src/vectrex/: dac.rs  mod.rs  veccore.rs  window.rs
src/window/: mod.rs  shader.rs  texture.rs  windowcore.rs
utils/: ins.rb  ins.txt  vrom.txt
utils/6809/: 6809all.asm  6809all.raw
utils/adler/: adler.raw  adler32.asm
(+11 files in other folders)
