[package]
name = "rustrex"
version = "0.1.0"
authors = ["Gaz Liddon Retina <gaz@gazaxian.com>"]

[dependencies]
bitflags="*"
serde = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
serde_derive = "1.0"
regex = "0.2"
lazy_static = "1.0"
sha1 = "0.5.0"
num="*"
clap = "2.30.0"
separator = "0.3.1"
log="*"
clippy = "*"
