[package]
name = "rustrex"
version = "0.1.0"
authors = ["Gaz Liddon Retina <gaz@gazaxian.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true


[dependencies]
bitflags="*"
serde = "*"
serde_yaml = "*"
serde_json = "*"
serde_derive = "*"
regex = "0.2"
lazy_static = "1.0"
sha1 = "0.5.0"
num="*"
clap = "2.30.0"
separator = "0.3.1"
log="*"
env_logger="*"
gl = "*"
itertools = "0.7.7"
image = "0.18"
notify = "4.0.0"
glium="*"
